--- a/_notebooks/2025-01-09-homework.ipynb
+++ b/_notebooks/2025-01-09-homework.ipynb
@@ -377,6 +377,181 @@
     "console.log(`Remaining fuel: ${initialFuel}`);\n",
     "console.log(`Mission Status: ${missionStatus}`);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lesson 2: Level 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need to get the color of the cars from the frogger game. Use an instance variable called myCar to accomplish this. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "______ Car {\n",
+    "    constructor(color) {\n",
+    "      ___.________ = color;  // Put your instance varibale in the blank\n",
+    "    }\n",
+    "  \n",
+    "    getColor() {\n",
+    "      return ____.________;\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  const myCar = new Car(\"_____\"); // Choose any color\n",
+    "  console.log(myCar.getColor()); // Once run, you should see your color in the console\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need a static variable for player lives. Use the variable playerLives to set the number of lives to 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "______ Health {\n",
+    "    ____________ = _;  // Make static variable and number for it\n",
+    "\n",
+    "}\n",
+    "  console.log(____________); "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lesson 2 - Level 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a Book class with an instance variable title and a static variable bookCount that tracks how many books have been created. Add a method getBookInfo() to return the book's title and total number of books."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Book {\n    static bookCount = 0;  // Static variable\n  \n    constructor(title) {\n      this.title = title;  // Instance variable\n      Book.bookCount++;  // Increment static variable each time an instance is created\n    }\n  \n    getBookInfo() {\n      return `Book Title: ${this.title}, Total Books: ${Book.bookCount}`;\n    }\n  }\n  \n  const book1 = new Book(\"JavaScript Basics\");\n  const book2 = new Book(\"Advanced JavaScript\");\n  console.log(book1.getBookInfo()); // Output: Book Title: JavaScript Basics, Total Books: 2\n  console.log(book2.getBookInfo()); // Output: Book Title: Advanced JavaScript, Total Books: 2\n  \n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "_____ Book {\n",
+    "    static ________ = 0;  // Static variable (maybe read above?)\n",
+    "  \n",
+    "    constructor(title) {\n",
+    "      this.title = title;  // Instance variable for title\n",
+    "      ____.________++;  // Use the static variable and increment it\n",
+    "    }\n",
+    "  \n",
+    "    getBookInfo() {\n",
+    "      return `Book Title: ${____._____}, Total Books: ${____._______}`; // use the instance and static variables here\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  const book1 = new Book(\"Mort's Guide to Making Students Fear You\");\n",
+    "  const book2 = new Book(\"____________\"); // Name a book for yourself\n",
+    "  console.log(book1.getBookInfo()); // Output: Book Title: JavaScript Basics, Total Books: 2\n",
+    "  console.log(book2.getBookInfo()); // Output: Book Title: Advanced JavaScript, Total Books: 2\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an ArcadeGame class that:\n",
+    "- Has instance variables gameName and highScore.\n",
+    "- Has a static variable totalGames to track how many - arcade games have been created.\n",
+    "- Includes a method getGameInfo() to return the game name and high score.\n",
+    "- Includes a static method getTotalGames() to return the total number of arcade games created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "_______ ArcadeGame {\n",
+    "    _______ _____________ = 0;  // Static variable to track total number of games\n",
+    "  \n",
+    "    constructor(gameName, highScore) {\n",
+    "      this.___________ = __________;  // Instance variable - same thing in each blank\n",
+    "      this.___________ = __________;  // Instance variable - same thing in each blank\n",
+    "      ArcadeGame.totalGames++;  // Increment static variable each time a new game is created\n",
+    "    }\n",
+    "  \n",
+    "    // Instance method to return the game name and high score\n",
+    "    getGameInfo() {\n",
+    "      return `${this.______}: High Score = ${this._________}`; //The instance variables from above maybe?\n",
+    "    }\n",
+    "  \n",
+    "    // Static method to get the total number of games\n",
+    "    static getTotalGames() {\n",
+    "      return ArcadeGame.totalGames;\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  // Create instances of the ArcadeGame class\n",
+    "  const game1 = new ArcadeGame(\"__________\", 5000); //Put any name for a game in the blank\n",
+    "  const game2 = new ArcadeGame(\"_________\", 7000);\n",
+    "  \n",
+    "  // Display game info\n",
+    "  console.log(game1.getGameInfo()); // Output: Your games High Score = 5000\n",
+    "  console.log(game2.getGameInfo()); // Output: Your games #2: High Score = 7000\n",
+    "  \n",
+    "  // Display total arcade games count\n",
+    "  console.log(ArcadeGame.getTotalGames()); // Output: 2\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
