--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -412,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
